module12/istio-ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gohttpserver
  namespace: demo-istio
spec:
  gateways:
  - gohttpserver
  hosts:
  - gohttpserver.cncamp.io
  http:
  - match:
    - uri:
        prefix: /fmeng
    rewrite:
      uri: /healthz
    route:
    - destination:
        host: fmeng.demo-istio.svc.cluster.local
        port:
          number: 80
  - route:
    - destination:
        host: gohttpserver.demo-istio.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gohttpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - gohttpserver.cncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
